# c_formatter_42

./: .clang-format  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  align  c_formatter_42  global-scope-align  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package-develop.yml  python-package.yml  python-publish.yml
c_formatter_42/: __main__.py  run.py
c_formatter_42/data/: .clang-format  clang-format-darwin  clang-format-darwin-arm64  clang-format-linux
c_formatter_42/formatters/: align.py  clang_format.py  helper.py  hoist.py  line_breaker.py  misc.py  preprocessor_directive.py  return_type_single_tab.py
c_formatter_42/test/formatters/: test_clang_format.py  test_hoist.py  test_misc.py
docs/source/: conf.py  index.rst
script/: align  format
script/test/: align.c
src/: conftest.py  main.py  run.py
src/formatters/: __init__.py  align.py  clang_format.py  helper.py  hoist.py  misc.py  regex.py
src/res/: main.c
src/test/: return_parenthesis.c  test_run.py
src/test/formatters/: test_align.py  test_clang_format.py  test_hoist.py  test_misc.py  test_parenthesize_return.py  test_preprocessor_directive.py
test/: align.c  global_align.c  global_align.c.orig  local.c
test/formatters/: test_align.py
tests/: test_run.py
tests/formatters/: test_align.py  test_clang_format.py  test_hoist.py  test_line_breaker.py  test_misc.py  test_preprocessor_directive.py  test_return_type_single_tab.py
