[metadata]
name = c_formatter_42
version = 0.2.1
description = formatting tool complient with 42 school's norm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dawnbeen/c_formatter_42
project_urls =
    Tracker = https://github.com/dawnbeen/c_formatter_42/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C
    Intended Audience :: Developers
    Environment :: Console
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.7

[options.package_data]
* =
    data/*
    data/.*

[options.exclude_package_data]
c_formatter_42 = test_*

[options.entry_points]
console_scripts =
    c_formatter_42 = c_formatter_42.__main__:main

[flake8]
ignore = E221,W503,E241
select = E,F,W,C4,N
max-line-length = 100

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true

[tool:pytest]
testpaths = tests
